; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_IsPartitionColumn.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_optimizer.c_IsPartitionColumn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@InvalidOid = common dso_local global i64 0, align 8
@NIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsPartitionColumn(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %5, align 4
  %9 = load i64, i64* @InvalidOid, align 8
  store i64 %9, i64* %6, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %7, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* @NIL, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @FindReferencedTableColumn(i32* %10, i32 %11, i32* %12, i64* %6, %struct.TYPE_4__** %7)
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* @InvalidOid, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %35

17:                                               ; preds = %2
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %19 = icmp ne %struct.TYPE_4__* %18, null
  br i1 %19, label %20, label %35

20:                                               ; preds = %17
  %21 = load i64, i64* %6, align 8
  %22 = call %struct.TYPE_4__* @DistPartitionKey(i64 %21)
  store %struct.TYPE_4__* %22, %struct.TYPE_4__** %8, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %24 = icmp ne %struct.TYPE_4__* %23, null
  br i1 %24, label %25, label %34

25:                                               ; preds = %20
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp eq i64 %28, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %25
  store i32 1, i32* %5, align 4
  br label %34

34:                                               ; preds = %33, %25, %20
  br label %35

35:                                               ; preds = %34, %17, %2
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local i32 @FindReferencedTableColumn(i32*, i32, i32*, i64*, %struct.TYPE_4__**) #1

declare dso_local %struct.TYPE_4__* @DistPartitionKey(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
